# CppEmployeeSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cxx
db/: database.cxx  database.hxx
model/: Employee.cxx  Employee.hxx
service/: EmployeeService.cxx  EmployeeService.hxx
sql/: init.sql
utils/: DbConfig.cxx  DbConfig.hxx
